--- a/src/styles/pages/Home.module.css
+++ b/src/styles/pages/Home.module.css
@@ -16,3 +16,14 @@
   gap: 10rem;
   align-content: center;
 }
+
+@media (max-width: 720px) {
+  .container {
+    max-width: 480px;
+  }
+
+  .container section {
+    grid-template-columns: 1fr;
+    gap: 5rem;
+  }
+}
